# MindEyeBase

./: CMakeLists.txt  LICENSE  README.md
core/: lib.cpp
example/: MindEyeBaseObject.cpp  alffplay.cpp  main.cpp
example/common/: alcomplex.cpp  alnumeric.h  alsem.cpp  alstring.cpp  althrd_setname.cpp  dynload.cpp  ringbuffer.cpp  strutils.cpp
include/AL/: alext.h
include/MindEyeBase/: MindEyeBase.h  MindEyeBaseObject.h
output/x64/Debug/: MindEyeBase.lib
output/x86/Debug/: MindEyeBase.lib
